<resources>
    <!-- General -->
    <string name="app_name">MeWallet</string>

    <!-- Buttons -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>

    <!-- New transaction fragment -->
    <string name="new_transaction_title">New Transaction</string>
    <string name="name_prompt">Enter the name</string>
    <string name="value_prompt">Enter the value</string>
    <string name="category_prompt">Choose a category</string>

    <!-- Overview transaction fragment -->
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="category">Category</string>

    <!-- Transaction list -->
    <string name="transaction_list_title">Transaction List</string>

    <!-- Category list -->
    <string name="category_list_title">Category List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="image_url">https://api.iconfinder.com/v4/icons/search</string>
</resources>