<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TransactionFragments.TransactionDetailContentFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/transaction_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/value" />

    <TextView
        android:id="@+id/transaction_value"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/category" />

    <TextView
        android:id="@+id/transaction_category"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/edit_transaction_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

</LinearLayout>