<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".TransactionFragments.TransactionEditorFragment">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name_prompt" />

        <EditText
            android:id="@+id/new_transaction_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:inputType="text"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/value_prompt" />

        <EditText
            android:id="@+id/new_transaction_value"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:inputType="numberDecimal"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/category_prompt" />

        <Spinner
            android:id="@+id/category_spinner"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/save_transaction_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />

</LinearLayout>